2003-09-30  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* append.adb, append.out, makefile:
	New regression test for Response.Set.Append_Body.

2003-09-23  Pascal Obry  <p.obry@wanadoo.fr>

	* test_wsdl2.wsdl, test_wsdl3.wsdl: 
	Remove space before http in href.
	Add missing wsdl shema detected by XmlAda v1.0 (prepare migration).
	
	* test_wsdl.wsdl:
	Remove space before http in href.

2003-09-23  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* hval.adb, hval.out:
	Add tests for parse Accept-XXXX header values.

2003-09-22  Pascal Obry  <p.obry@wanadoo.fr>

	* sback.adb: 
	Add routine header box.

2003-09-21  Pascal Obry  <p.obry@wanadoo.fr>

	* sback.out, ssback.out:
	Update output.

	* sback.adb, ssback.adb:
	Fix this regression test to pass on UNIX. Serialize IO to have
	 always the same output. Close persistent connection and shutdown
	 the server.

2003-09-18  Pascal Obry  <p.obry@wanadoo.fr>

	* server_info.adb:
	Use 6 simultaneous connections otherwise AWS will try to release
	 one as soon as only a single one is free.

2003-09-18  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* sback.adb, sback.out, ssback.adb, ssback.out, makefile:
	New regression tests for AWS.Server.Give_Back_Socket routine.

2003-09-09  Pascal Obry  <p.obry@wanadoo.fr>

	* server_info.adb:
	Slight change to ensure the connections are really active before
	 getting the current number of connections. Fix failure on UNIX.

	* sessions3.adb:
	Use port 1260 for this test.

2003-09-07  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(RT_STD): Add sessions3.

	* sessions3.adb, sessions3.out:
	Initial revision.

2003-09-06  Pascal Obry  <p.obry@wanadoo.fr>

	* dirop.adb:
	Set Result to constant.

	* makefile:
	(RT_STD): Add server_config.

	* aws.ini:
	Initial revision.
	
	* server_config.adb, server_config.out, server_config.ini:
	Initial revision.
	
2003-09-06  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(RT_STD): Add server_info.

	* server_info.adb, server_info.out:
	Initial revision.
